--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><body><div id="root"></div></body></html>
+<!DOCTYPE html> 
+<html lang="en"> 
+  <head> 
+    <meta charset="UTF-8" /> 
+      <title>My Portfolio</title> 
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> 
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet"> 
+  </head> 
+  <body> 
+        <div id="root"></div> 
+  </body> 
+</html>
